# qtc-dbviewer

./: .gitignore  AGENTS.md  BUILD_SUMMARY.md  CMakeLists.txt  QtcDbViewer.json.in  README.md  paths.pri  qtc-dbviewer.pro
pluginexample/: AGENTS.md  CMakeLists.txt  Pluginexample.json.in  README.md  pluginexample.cpp  pluginexampleconstants.h  pluginexampletr.h
pluginexample/.github/workflows/: build_cmake.yml
resources/: icons.qrc  resources.qrc
src/: Constants.h  DbConnection.cpp  DbConnection.h  DbTypes.h  QtcDbViewerPlugin.cpp  QtcDbViewerPlugin.h  QtcDbViewerTr.h  SQLHighlighter.cpp  SQLHighlighter.h  WConnection.h  WConnection.ui  WMain.h  WMain.ui
